force-app/main/default/objects/Booth__c/Booth__c.object-meta.xml
<CustomObject>
    <label>Festival Booth</label>
    <nameField>
        <displayFormat>BOOTH-{0000}</displayFormat>
        <label>Booth Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Festival Booths</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>