force-app/main/default/objects/Booth__c/fields/Daily_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Daily_Capacity__c</fullName>
    <description>The maximum number of folks that can be at the booth</description>
    <label>Daily Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>