force-app/main/default/objects/Booth__c/fields/Inspection_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Frequency__c</fullName>
    <label>Inspection Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Every 2 hours</fullName>
            </value>
            <value>
                <fullName>Every 4 hours</fullName>
            </value>
            <value>
                <fullName>Every 6 hours</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>