force-app/main/default/objects/Booth__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Main_Square</fullName>
                <label>Main Square</label>
            </value>
            <value>
                <fullName>Treat_Lane</fullName>
                <label>Treat Lane</label>
            </value>
            <value>
                <fullName>Sweet_Corner</fullName>
                <label>Sweet Corner</label>
            </value>
            <value>
                <fullName>Festival Row</fullName>
                <label>Festival_Row</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>