force-app/main/default/objects/Booth__c/fields/Safety_Rating__c.field-meta.xml
<CustomField>
    <fullName>Safety_Rating__c</fullName>
    <description>To track the safety level of a booth&apos;s setup and operations</description>
    <inlineHelpText>To track the safety level of a booth&apos;s setup and operations</inlineHelpText>
    <label>Safety Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 = Critical issues (needs immediate attention)</fullName>
            </value>
            <value>
                <fullName>2 = Major concerns</fullName>
            </value>
            <value>
                <fullName>3 = Minor issues</fullName>
            </value>
            <value>
                <fullName>4 = Good standing</fullName>
            </value>
            <value>
                <fullName>5 = Excellent/Perfect safety record</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>