force-app/main/default/objects/Booth__c/fields/Setup_Date__c.field-meta.xml
<CustomField>
    <fullName>Setup_Date__c</fullName>
    <label>Setup Date</label>
    <type>DateTime</type>
</CustomField>